IVYPORTAL-16025 - Fix bug: input field for number too small

--- a/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
+++ b/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
@@ -1842,7 +1842,7 @@ body .ui-widget.new-widget-dialog__introduction {
 }
 
 .dashboard-widget-filter__filter-panel > div.number-panel {
-  max-width: 3vw;
+  max-width: 6vw;
 }
 
 .dashboard-widget-filter__filter-panel > div.and-text-panel {
